src/index.css
@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  font-family: "Cinzel Decorative", cursive;
  font-size: 1.5rem;
  height: 100vh;
  color: #222;
  background-color: #eabfb9;
  display: flex;
  align-items: center;
  justify-content: center;
}

.app {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 80rem;
  gap: 2rem;
  padding: 6rem 0;
  border: 2px solid #222;
  outline: 2px solid #222;
  outline-offset: 1.2rem;
}

h1 {
  font-weight: 400;
  font-size: 6rem;
  letter-spacing: 2px;
  word-spacing: 5px;
}

h2 {
  text-align: center;
  margin-bottom: 2.4rem;
}

input {
  font-family: inherit;
  color: inherit;
  font-size: 2rem;
  background-color: #f0d2ce;
  padding: 1.6rem 3.2rem;
  border: none;
  width: 32rem;
}

input:focus {
  outline: 2px solid #222;
}

.weather {
  list-style: none;
  display: flex;
  gap: 1rem;
}

.day {
  background-color: #f0d2ce;
  padding: 1.6rem 0 2rem;
  width: 10rem;

  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.2rem;
  cursor: pointer;
}

.day span {
  font-size: 5.2rem;
}

.day.important {
  background-color: #ecc5c0;
  outline: 2px solid #222;
}

.loader {
  font-size: 2.4rem;
  font-weight: 700;
}

